[package]
name = "bevy_interact_2d"
version = "0.12.0"
resolver = "2"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Bevy plugin for 2d mouse interactions"
keywords = ["mouse", "2d", "gamedev", "bevy"]
categories = ["game-engines"]
homepage = "http://github.com/Anshorei/bevy_interact_2d"
documentation = "http://github.com/Anshorei/bevy_interact_2d"
repository = "http://github.com/Anshorei/bevy_interact_2d"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
parry2d = "0.13.5"
nalgebra = "0.32.0"
